# palautusrepositorio

./: .gitignore  README.md
viikko1/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/git-branch-harjoitus/: erotus.py  index.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/: README.md
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko3/webcounter/: output.xml  report.html
viikko3/webcounter/src/: app.py
viikko3/webcounter/src/templates/: index.html
viikko3/webcounter/src/tests/: set.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/: ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: kayttoliittyma.py  sovelluslogiikka
viikko5/int-joukko/src/: int_joukko.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/: PULL.md  joku.py
viikko6/query-language/src/: index.py  matchers.py  query.py
viikko7/: referaatti.md
