[tool.poetry]
name = "poetryweb"
version = "0.1.0"
description = ""
authors = ["Julia Rahkonen <juliarahkonen1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
